# arch-sketch

./: .gitignore  LICENSE  README.md  docker-compose.yml
agent/: plan.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  pyrightconfig.json
backend/api/routes/: generate.py
backend/models/: diagram.py  request.py
backend/prompts/: api.txt  api_design.txt  database.txt  high_level.txt  low_level.txt
backend/services/: gemini_client.py  json_repair.py  model_router.py  nvidia_client.py  ollama_client.py  prompt_engine.py  rate_limit.py
client/: .env.example  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts
client/e2e/: workspace.spec.ts
client/src/: App.tsx  index.css
client/src/api/: generate.test.ts  generate.ts  request.ts
client/src/components/: DiagramCanvas.tsx  DiagramTabs.tsx  EmptyCanvasState.tsx  GitHubButton.tsx  InputForm.tsx  PromptComposer.tsx  SystemHistory.tsx  WorkspaceShell.tsx  WorkspaceToolbar.tsx
client/src/edges/: ApiEdge.tsx  FKEdge.tsx
client/src/lib/: diagramMapper.ts  diagramPersistence.test.ts  diagramPersistence.ts  iconRegistry.test.ts  iconRegistry.ts  layoutEngine.test.ts  layoutEngine.ts  promptPersistence.test.ts  promptPersistence.ts
client/src/nodes/: ArchitectureNode.tsx  ClassNode.tsx  ClientNode.tsx  ComponentNode.tsx  GroupNode.tsx  ServiceNode.tsx  TableNode.tsx
client/src/store/: diagramStore.ts
client/src/types/: diagram.ts
infra/: README.md  deploy-cloudflare.sh
infra/cloudflare/: .gitignore  pyproject.toml  worker.py  wrangler.jsonc
