[project]
name = "backend"
version = "0.1.0"
description = "backend for arch-sketch"
authors = [
    {name = "jacklvd", email = "vodanglong3103@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.137.0",
    "ollama>=0.6.2,<0.7.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

# No [build-system]: this is an application, not a package — uv installs the
# dependencies without trying to build/install the project itself (the uv
# equivalent of poetry's old `package-mode = false`).
