[project]
name = "arch-sketch-worker"
version = "0.1.0"
description = "Cloudflare Python Worker bundling the arch-sketch FastAPI backend"
# 3.13, not backend's 3.14: the Worker runs Pyodide, which trails CPython. The copied
# backend source uses no 3.14-only syntax (only `X | Y` unions, PEP 585 generics — all
# ≥3.10), so it runs unchanged at the edge. Bump when Pyodide ships 3.14.
requires-python = ">=3.13"

# Worker-only deps. Deliberately minimal — NOT fastapi/pydantic. The edge uses a
# hand-rolled handler (worker.py) instead of FastAPI, because loading the
# fastapi+pydantic+starlette stack in Pyodide exceeds the free-tier runtime budget
# (the isolate fails to initialise). httpx is the only real dependency; the Workers
# SDK (WorkerEntrypoint, Response) comes from workers-py. ollama & openai are omitted
# (no edge wheels, unreachable from the edge; ollama_client imports ollama lazily).
dependencies = [
    "httpx",
]

[dependency-groups]
dev = [
    "workers-py",
]

# No [build-system]: this is an application bundle, not a package.
